<resources>
    <string name="app_name">MyTubeApp</string>
    <string name="user">Usuario</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="old_password">Contraseña actual</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="login">Login</string>
    <string name="rememberMe">Recuérdame</string>
    <string name="register">Registro</string>
    <string name="notNow">Recuérdamelo más tarde</string>
    <string name="add_song">Add</string>
    <string name="update_song">Update</string>
    <string name="delete_song">Delete</string>
    <string name="input_title">Título</string>
    <string name="input_author">Autor</string>
    <string name="input_url">Url</string>
    <string name="back">Atrás</string>
    <string name="filter">Filtro</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="listado_de_canciones">Listado de canciones</string>
    <string name="panel_de_administraci_n">Panel de Administración</string>
    <string name="text_label_1">Añadir</string>
    <string name="text_label_2">Eliminar</string>
    <string name="text_label_3">Editar</string>
    <string name="text_label_4">Volver</string>
    <string name="logOut">Log Out</string>
    <string name="title_register">Nuevo usuario</string>
    <string name="configuraci_n">Configuración</string>
    <string name="icono">Icono</string>
    <string name="menu_de_filtrado">menu de filtrado</string>
    <string name="filtrar_por_t_tulo">Filtrar por Título</string>
    <string name="filtro">filtro</string>
    <string name="favorite">Favoritos</string>
    <string name="filtro_t_tulo">Filtro Título</string>
    <string name="filtro_autor">Filtro Autor</string>
    <string name="changePass">Cambiar contraseña</string>
    <string name="update">Actualizar</string>
    <string name="forgot">¿Has olvidado la contraseña?/Actualizar contraseña</string>
    <string name="autor">Autor</string>
    <string name="filtrado_por_autor">Filtrado por Autor</string>
    <string name="ocultar_filtro">Ocultar Filtro</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="icono_de_la_aplicaci_n">Icono de la aplicación</string>
    <string name="boton_de_reproducci_n">Boton de reproducción</string>
    <string name="boton_de_favoritos">Boton de favoritos</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
</resources>