<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/create"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/text_label_1"/>
    <item
        android:id="@+id/delete"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/text_label_2"/>

    <item
        android:id="@+id/logOut"
        android:enabled="true"
        android:icon="@drawable/logout"
        android:title="@string/cerrar_sesi_n"/>

    <item
        android:id="@+id/edit"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/text_label_3"/>
    <item
        android:id="@+id/back"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/text_label_4"/>
</menu>