<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FF0000"
    tools:context=".ui.song.SongFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/song_input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/input_title"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="86dp" />

        <EditText
            android:id="@+id/song_input_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/input_author"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="172dp" />

        <EditText
            android:id="@+id/song_input_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/input_url"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="246dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>