<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/config_Song"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="55dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/textViewMain"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/free_youtube_logo_icon_2431_thumb" />

    <TextView
        android:id="@+id/textViewMain"
        android:layout_width="292dp"
        android:layout_height="34dp"
        android:layout_marginTop="28dp"
        android:text="@string/panel_de_administraci_n"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/songs_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMain"
        app:layout_constraintVertical_bias="0.6">

        <EditText
            android:id="@+id/song_input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_title"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@+id/song_input_url"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/song_input_author" />

        <EditText
            android:id="@+id/song_input_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_author"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@+id/song_input_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/song_input_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_url"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/song_input_title" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/songs_list"
        android:layout_width="411dp"
        android:layout_height="408dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_config_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>


